--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "bluebird": "^2.9.14",
+    "commander": "^2.7.1",
     "id3js": "^1.1.3",
     "ramda": "^0.11.0",
     "request": "^2.53.0",
